log_in html complete.

--- a/home page/home_page.html
+++ b/home page/home_page.html
@@ -105,7 +105,7 @@
     <header>
         <!--This is logo and name of the website-->
     <section id="logo_name">
-        <img src="image 1.png" alt="">
+        <img src="/imgs/image 1.png" alt="">
         <a href="">COMMUNICA</a>  
     </section>
      <!--end -->
