LOOGIN FILE LINKED

--- a/home page/home_page.html
+++ b/home page/home_page.html
@@ -40,7 +40,7 @@
      <!--User details-->
      <section>
         <i class="fa-solid fa-user"></i>
-       <a href="">User</a>
+       <a href="/log_in page/login.html">LOG IN</a>
     
      </section>
 </header>
