updated home page but footer is still not done.

--- a/home page/home_page.html
+++ b/home page/home_page.html
@@ -108,8 +108,9 @@
     
     <!--empty article end-->
 </div>
-<div>
-    <h3>GLOBAL COMMUNITIES</h3>
+<div id="community_tab">
+    <center><h3>GLOBAL COMMUNITIES</h3> </center> 
+    <div>
     <section>
         <span>
         <img src="" alt="community_pic"><br>
@@ -123,6 +124,59 @@
         can help the community to use the web
         services properly.</p>
     </section>
+    <section>
+        <span>
+        <img src="" alt="community_pic"><br>
+        <a href="">Community name</a>
+        <p>number of followers</p>
+    </span>
+    <p>This community is about the services 
+        provided by the amazon company. In 
+        this community people discuss about 
+        the different perks , tips and tricks that
+        can help the community to use the web
+        services properly.</p>
+    </section>
+    <section>
+        <span>
+        <img src="" alt="community_pic"><br>
+        <a href="">Community name</a>
+        <p>number of followers</p>
+    </span>
+    <p>This community is about the services 
+        provided by the amazon company. In 
+        this community people discuss about 
+        the different perks , tips and tricks that
+        can help the community to use the web
+        services properly.</p>
+    </section>
+    <section>
+        <span>
+        <img src="" alt="community_pic"><br>
+        <a href="">Community name</a>
+        <p>number of followers</p>
+    </span>
+    <p>This community is about the services 
+        provided by the amazon company. In 
+        this community people discuss about 
+        the different perks , tips and tricks that
+        can help the community to use the web
+        services properly.</p>
+    </section>
+    <section>
+        <span>
+        <img src="" alt="community_pic"><br>
+        <a href="">Community name</a>
+        <p>number of followers</p>
+    </span>
+    <p>This community is about the services 
+        provided by the amazon company. In 
+        this community people discuss about 
+        the different perks , tips and tricks that
+        can help the community to use the web
+        services properly.</p>
+    </section>
+    </div>
 </div>
 
 </div>
