--- a/blogs page/blog.html
+++ b/blogs page/blog.html
@@ -14,8 +14,8 @@
     <header>
         <!--This is logo and name of the website-->
     <section id="logo_name">
-        <img src="/imgs/image 1.png" alt="">
-        <a href="/home page/home_page.html">COMMUNICA</a>  
+        <img src="../imgs/image 1.png" alt="">
+        <a href="../index.html">COMMUNICA</a>  
     </section>
      <!--end -->
 
