--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <!--This is logo and name of the website-->
     <section id="logo_name">
-        <img src="/imgs/image 1.png" alt="">
+        <img src="../imgs/image 1.png" alt="">
         <a href="">COMMUNICA</a>  
     </section>
      <!--end -->
@@ -31,7 +31,7 @@
     <nav id="navigation-elements">
         <div id="blogs">
             <i class="fa-solid fa-list"></i>
-            <a href="blogs page/blog.html">BLOGS</a>
+            <a href="/blogs page/blog.html">BLOGS</a>
         </div>
         <div id="communities">
             <i class="fa-solid fa-users"></i>
