--- a/log_in page/login.html
+++ b/log_in page/login.html
@@ -16,7 +16,7 @@
     <header>
         <!--This is logo and name of the website-->
         <section id="logo_name">
-            <img src="/imgs/image 1.png" alt="logo">
+            <img src="../imgs/image 1.png" alt="logo">
             <a href="">COMMUNICA</a>
         </section>
         <!--end -->
