--- a/log_in page/login.html
+++ b/log_in page/login.html
@@ -42,7 +42,7 @@
         <i class="fa-brands fa-x-twitter"></i>
         <i class="fa-brands fa-google"></i>
 
-        <a href="../signup/signup.html">Signup</a>
+        <a href="signup/signup.html">Signup</a>
 
 
 
