--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav id="navigation-elements">
         <div id="blogs">
             <i class="fa-solid fa-list"></i>
-            <a href="../blogs page/blog.html">BLOGS</a>
+            <a href="blogs page/blog.html">BLOGS</a>
         </div>
         <div id="communities">
             <i class="fa-solid fa-users"></i>
@@ -52,7 +52,7 @@
      <!--User details-->
      <section id="login">
         <i class="fa-solid fa-user"></i>
-       <a href="../log_in page/login.html">LOG IN</a>
+       <a href="log_in page/login.html">LOG IN</a>
     
      </section>
 </header>
