--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <!--This is logo and name of the website-->
     <section id="logo_name">
-        <img src="../imgs/image 1.png" alt="">
+        <img src="imgs/image 1.png" alt="">
         <a href="">COMMUNICA</a>  
     </section>
      <!--end -->
