--- a/blogs page/blog.html
+++ b/blogs page/blog.html
@@ -51,7 +51,7 @@
      <!--User details-->
      <section id="login">
         <i class="fa-solid fa-user"></i>
-       <a href="log_in page/login.html">LOG IN</a>
+       <a href="../log_in page/login.html">LOG IN</a>
      </section>
 </header>
 <div class="main_body">
