--- a/home page/index.html
+++ b/home page/index.html
@@ -22,7 +22,8 @@
 
     <!--this is the search bar-->
     <section id="search_bar">
-         <input type="text" placeholder="Search"><i class="fa-solid fa-magnifying-glass"></i>
+        <button><input type="text" placeholder="Search"><i class="fa-solid fa-magnifying-glass"></i></button>
+         
     </section>
       <!--end -->
 
