--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--this is the search bar-->
     <section id="search_bar">
         <input type="text" placeholder="Search">
-        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+        <button id="search_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
          
     </section>
       <!--end -->
