--- a/blogs page/blog.html
+++ b/blogs page/blog.html
@@ -8,20 +8,23 @@
 <link href="https://fonts.googleapis.com/css2?family=Gabarito&family=Montserrat:wght@500&family=Palanquin+Dark&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6419750be3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="blog.css">
+    <link rel="stylesheet" href="/home page/nav.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <!--This is logo and name of the website-->
     <section id="logo_name">
-        <img src="../imgs/image 1.png" alt="">
-        <a href="../index.html">COMMUNICA</a>  
+        <img src="imgs/image 1.png" alt="">
+        <a href="/index.html">COMMUNICA</a>  
     </section>
      <!--end -->
 
     <!--this is the search bar-->
     <section id="search_bar">
-         <input type="text" placeholder="Search"><i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" placeholder="Search">
+        <button id="search_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+         
     </section>
       <!--end -->
 
@@ -30,7 +33,7 @@
     <nav id="navigation-elements">
         <div id="blogs">
             <i class="fa-solid fa-list"></i>
-            <a href="">BLOGS</a>
+            <a href="blogs page/blog.html">BLOGS</a>
         </div>
         <div id="communities">
             <i class="fa-solid fa-users"></i>
@@ -51,7 +54,8 @@
      <!--User details-->
      <section id="login">
         <i class="fa-solid fa-user"></i>
-       <a href="../log_in page/login.html">LOG IN</a>
+       <a href="log_in page/login.html">LOG IN</a>
+    
      </section>
 </header>
 <div class="main_body">
