--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gabarito&family=Montserrat:wght@500&family=Palanquin+Dark&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6419750be3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/home page/nav.css">
+    <link rel="stylesheet" href="home page/nav.css">
     <link rel="stylesheet" href="home page/style.css">
     <title>Document</title>
 </head>
