Changes to be committed: 	modified:   blogs page/blog.html

--- a/blogs page/blog.html
+++ b/blogs page/blog.html
@@ -7,7 +7,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Gabarito&family=Montserrat:wght@500&family=Palanquin+Dark&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/6419750be3.js" crossorigin="anonymous"></script>
-     <link rel="stylesheet" href="/home page/nav.css"> 
+     <link rel="stylesheet" href="./home page/nav.css"> 
        <link rel="stylesheet" href="blog.css">
 
     <title>Document</title>
@@ -16,8 +16,8 @@
     <header>
         <!--This is logo and name of the website-->
     <section id="logo_name">
-        <img src="/imgs/image 1.png" alt="">
-        <a href="/index.html">COMMUNICA</a>  
+        <img src="./imgs/image 1.png" alt="">
+        <a href="./index.html">COMMUNICA</a>  
     </section>
      <!--end -->
 
@@ -34,7 +34,7 @@
     <nav id="navigation-elements">
         <div id="blogs">
             <i class="fa-solid fa-list"></i>
-            <a href="/blogs page/blog.html">BLOGS</a>
+            <a href="./blogs page/blog.html">BLOGS</a>
         </div>
         <div id="communities">
             <i class="fa-solid fa-users"></i>
@@ -55,7 +55,7 @@
      <!--User details-->
      <section id="login">
         <i class="fa-solid fa-user"></i>
-       <a href="/log_in page/login.html">LOG IN</a>
+       <a href="./log_in page/login.html">LOG IN</a>
     
      </section>
 </header>
