modified:   blogs page/blog.css 	modified:   blogs page/blog.html 	modified:   log_in page/style.css

--- a/blogs page/blog.html
+++ b/blogs page/blog.html
@@ -10,7 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Gabarito&family=Montserrat:wght@500&family=Palanquin+Dark&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/6419750be3.js" crossorigin="anonymous"></script>
-    <!-- <link rel="stylesheet" href="/home page/nav.css">  -->
+    <link rel="stylesheet" href="/home page/nav.css"> 
     <link rel="stylesheet" href="blog.css">
 
     <title>Document</title>
@@ -26,11 +26,12 @@
         <!--end -->
 
         <!--this is the search bar-->
-        <section id="search_bar">
-            <input type="text" placeholder="Search">
-            <button id="search_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
-
-        </section>
+       
+    <section id="search_bar">
+        <input type="text" placeholder="Search">
+        <button id="search_btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+         
+    </section>
         <!--end -->
 
 
