modified:   log_in page/login.html 	modified:   log_in page/style.css

--- a/log_in page/login.html
+++ b/log_in page/login.html
@@ -29,9 +29,9 @@
         <h3 id="login">Login</h3>
         <!-- input area -->
         <p id="username">username</p>
-        <input type="text" placeholder="enter username" id="nameinput" >
+        <input type="text" placeholder="Enter username" id="nameinput" >
         <p id="pass">password</p>
-        <input type="password" placeholder="enter password" id="passinput">
+        <input type="password" placeholder="Enter password" id="passinput">
         <!-- end of input area -->
 
         <a href="#" id="forget">forget password?</a>
